--- a/website/apps/abcast/static/abcast/nj/emission.html
+++ b/website/apps/abcast/static/abcast/nj/emission.html
@@ -19,6 +19,7 @@
 			
 			{% if object.playing %}
 			<i class="icon-bullhorn pull-right"></i>
+                asd
 			{% endif %}
 			
 			{% if object.locked %}
