--- a/website/apps/abcast/static/abcast/nj/on_air_emission.html
+++ b/website/apps/abcast/static/abcast/nj/on_air_emission.html
@@ -1,13 +1,10 @@
 <!--
-
 <ul class="unstyled">
 	<li><strong class="name"><a href="{{ object.absolute_url }}">{{ object.name|truncate_chars_inner(30) }}</a></strong><small class="pull-right">{{ object.type_display }}</small></li>
 	<li><a href="{{ object.user.absolute_url }}">{{ object.user.full_name }}</a></li>
 	<li>{{ object.time_start|format_datetime('time') }} - {{ object.time_end|format_datetime('time') }}</li>
 </ul>
-
 -->
-
 
 <section class="title">
     <!--
@@ -16,7 +13,7 @@
 	<h3>
         <a href="{{ object.absolute_url }}">{{ object.name }}</a>
         <small class="pull-right">
-            <a href="#" class="btn streamable popup" data-resource_uri="#"><i class="icon-play"></i>&nbsp;&nbsp;Tune In</a>
+            <a href="#" class="btn streamable popup" data-resource_uri="{{ api_url }}"><i class="icon-play"></i>&nbsp;&nbsp;Tune In</a>
         </small>
     </h3>
 	<ul class="unstyled">
