removed filer from release, artist & label

--- a/website/apps/alibrary/static/alibrary/nj/provider/search_dialog.html
+++ b/website/apps/alibrary/static/alibrary/nj/provider/search_dialog.html
@@ -81,7 +81,13 @@
             {% if provider == "musicbrainz" %}
                 <div class="row-fluid">
 
-                    <div class="span12">
+                    <div class="span2">
+                        {% if  result.thumb %}
+                            <img src="/static/img/base/defaults/listview.release.xl.png" data-carchive_url="{{ result.thumb }}">
+                        {% endif %}
+                    </div>
+
+                    <div class="span10">
 
 
 
