--- a/website/apps/abcast/static/abcast/nj/emission_popup.html
+++ b/website/apps/abcast/static/abcast/nj/emission_popup.html
@@ -49,6 +49,8 @@
 
 </section>
 
+
+{% if not readonly %}
 <section class="form">
 
 	<fieldset>
@@ -95,3 +97,4 @@
 	</div>
 
 </section>
+{% endif %}
