complete refactoring of exporter

--- a/website/apps/exporter/static/exporter/nj/export.html
+++ b/website/apps/exporter/static/exporter/nj/export.html
@@ -55,10 +55,13 @@
                     <a href="{{ object.get_absolute_url }}"><i class="icon-edit"></i> Details</a>
                 </li>
                 -->
+                {% if object.status != 2 %}
                 <li>
-                    <a href="#" data-action="delete"><i class="icon-trash"></i>
-                        Delete</a>
+                    <a href="#" data-action="delete"><i class="icon-trash"></i>Delete</a>
                 </li>
+                {% else %}
+                    <li>...</li>
+                {% endif %}
                 <!--
                 <li class="divider"></li>
                 <li>
